# flask_template_cli

./: readme.md  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
flask_template_cli/: cli.py  test.py  types.py
flask_template_cli/templates/: __init__.py  auth_gen.py  init_gen.py  models_gen.py  req_txt_gen.py  routes_gen.py
tests/: test_cli.py
