[metadata]
name = flask_template_cli
version = 0.1.1
url = https://github.com/saipraveenkondapalli/flask_template_cli
author = Sai Praveen Kondapalli
author_email = saipraveenkondapalli@gmail.com
description = Description of my package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    typer
    rich
    InquirerPy

[options.entry_points]
console_scripts =
    flask_template_cli = flask_template_cli.cli:main

